<resources>
    <string name="app_name">climateHero</string>
    <string name="Log_in">Log In</string>
    <string name="Log_out">Log Out</string>
    <string name="email">Email</string>
    <string name="learn">Learn</string>
    <string name="take_pic">Take a Pic</string>
    <string name="act">Act!</string>
    <string name="track_lightbulb">Are your light bulbs energy efficient?</string>
    <string name="learn_more">Learn more about climate change</string>
    <string name="fossil_fuel">Fossil Fuels</string>
    <string name="deforest">Deforestation</string>
    <string name="recycling">Recycling</string>
    <string name="food_consumption">Food Consumption</string>
    <string name="resource">Resource Usage</string>
    <string name="track">Track</string>
    <string name="track_next">Track Next Goal</string>
    <string name="back_home">Back to Home</string>
    <string name="all">All of Them</string>
    <string name="some">Some of Them</string>
    <string name="one">One of Them</string>
    <string name="none">None of Them</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="fossil_fuels">"If you want to reduce your carbon footprint, one of the most significant ways you can do so is by limiting your usage of fossil fuels. On Earth, human activities are changing the natural greenhouse. Over the last century the burning of fossil fuels like coal and oil has increased the concentration of atmospheric carbon dioxide (CO2). This happens because the coal or oil burning process combines carbon with oxygen in the air to make CO2. To a lesser extent, the clearing of land for agriculture, industry, and other human activities has increased concentrations of greenhouse gases. In its Fifth Assessment Report, the Intergovernmental Panel on Climate Change, a group of 1,300 independent scientific experts from countries all over the world under the auspices of the United Nations, concluded theres a more than 95 percent probability that human activities over the past 50 years have warmed our planet. The industrial activities that our modern civilization depends upon have raised atmospheric carbon dioxide levels from 280 parts per million to 400 parts per million in the last 150 years. The panel also concluded there's a better than 95 percent probability that human-produced greenhouse gases such as carbon dioxide, methane and nitrous oxide have caused much of the observed increase in Earths temperatures over the past 50 years."</string>
    <string name="deforestation">"Forests are vital for human and animal lives as they are home to millions of species, prevent soil erosion, play a crucial role in water cycle by returning water vapor back into the atmosphere, absorb greenhouse gases that fuel global warming, keep soil moist by blocking the sun, produce oxygen and absorb carbon dioxide. Forests cover about 30% of the world’s land area and large patches of forests are lost every year due to deforestation. If current rate of deforestation continue, there will be no more rainforests in 100 years. It is estimated that due to cutting and burning of forests every year, more than 1.5 billion tons of carbon dioxide are released into the atmosphere. In order to reduce your own carbon footprint, consider planting trees! It's easy and affordable to do so. If you are building something, consider using repurposed wood (such as reclaimed barn wood or boards previously used for projects no longer needed) so you can curb the amount of new trees that need to be cut down. Not only will it look great, but you'll be adding some history to whatever you decide to build!"</string>
    <string name="recycling_info">"Recycling is one of the best ways for you to have a positive impact on the world in which we live. Recycling is important to both the natural environment and us. We must act fast as the amount of waste we create is increasing all the time. This is because people have the buying power to purchase a lot of goods, many of which they don't need, and contain harmful chemicals that do not decompose or break down. As our planet gains "stuff", we must also find ways to get rid of what we currently have. Recycling plastics and paper in your home is not the only way to participate, though it is a great help! You can also make a difference by buying used goods, visiting thrift stores instead of purchasing new items, bringing your own reusable bags to the supermarket, and investing in products that are recyclerable or can naturally decompose. Avoid styrofoam and other synthetic materials that stay intact for hundreds of years. By reducing the amount of new stuff you buy, reusing and repurposing materials for new projects, and seeking out goods that can be recycled, you'll be making a huge impact on the world around you!</string>
    <string name="food_consumption_info">"Though we often don't think about it, the way we eat has a big impact on climate change. The way we farm meat, and the resources necessary to raise and process animals, has called meat-based eating into question. As a result, researchers have looked into the impact that low-meat or vegetarian diets could have on the environment at large. One study shows a global transition to a low-meat diet would result in a 50% reduction climate change costs by 2050. That is a significant change! Unfortunately, many Americans are not aware of the impact that raising and eating meat has globally. Many are also reluctant at the idea of stopping meat consumption all together, based on preference or tradition. However, Prof Keith Richards, at the University of Cambridge and one of the researchers behind the two key scientific studies, said: “This is not a radical vegetarian argument; it is an argument about eating meat in sensible amounts as part of healthy, balanced diets.” While we won't force you to stop eating meat, you can be a real Climate Hero by making smarter choices, practicing "Meatless Mondays" - and if you must, choose lighter-impact meats like chicken as opposed to heavy resource users like red meat."</string>
    <string name="resource_usage">"The effects of deforestation, fossil fuel usage, mass production of new materials, and a global meat diet all contribute to the escalating issue of resource usage. Many resources are finite, and as we continue to use without proper replenishment, we leave our planet and ourselves at a disadvantage. The average house requires 20-30 mature trees in order to be built. The average hamburger requires 660 gallons of water to be produced over the course of its "farm to table" timeline. The average plastic bag, if not recycled, can take 1,000 years to decompose. A single airplane passenger contributes 90 kilograms of C02 per hour directly into the atmosphere. Multiply that out by passenger per plane, and planes per day, and the numbers are truly scary. Reducing our usage of resources across the board - by finding alternate means of travel, recycling, buying used goods, bringing reusable bags, building sustainable homes, eating less meat, driving earth-responsible cars, and so on will save our population and our planet. Without active measures to do so, we put ourselves at risk of a resource shortage without the proper infrastructure to handle it. This can cause worldwide starvation, turmoil, and conflict. So do your part - being a Climate Hero can save the world!"</string>

</resources>
