<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_learn"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#047498"
    tools:context="com.example.android.climatehero.Learn">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/learn_more"
        android:textSize="35dp"
        android:textColor="#FFFF"
        android:textStyle="bold"
        android:textAlignment="center" />

    <Button
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/fossil_fuel"
        android:onClick="fossilFuels"
        android:textSize="20dp"
        android:background="#E0F1F7" />

    <Button
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:onClick="deforestation"
        android:layout_marginTop="170dp"
        android:text="@string/deforest"
        android:textSize="20dp"
        android:background="#C9ECF8" />

    <Button
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="240dp"
        android:onClick="recycling"
        android:text="@string/recycling"
        android:textSize="20dp"
        android:background="#B1E9FB" />

    <Button
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="310dp"
        android:text="@string/food_consumption"
        android:textSize="20dp"
        android:onClick="foodConsumption"
        android:background="#99DFF6" />

    <Button
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="380dp"
        android:text="@string/resource"
        android:onClick="resourceUsage"
        android:textSize="20dp"
        android:background="#90D5EC"
        android:id="@+id/button2" />

    <Button
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:background="#FFFF"
        android:onClick="backHome2"
        android:text="@string/back_home"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_alignTop="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:id="@+id/button" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/footer"
        android:id="@+id/imageView"
        android:paddingTop="20dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
