<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#047498"
    tools:context="com.example.android.climatehero.ActivityActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="64dp"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:fontFamily="verdana"
        android:layout_marginTop="1dp"
        android:textColor="#FFFF" />

    <ImageView
        android:layout_width="280dp"
        android:layout_height="280dp"
        android:src="@drawable/nature"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="100dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="400dp"
        android:textColor="#FFFF"
        android:textStyle="bold"
        android:hint="@string/email"
        android:id="@+id/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#FFFF"
        android:textStyle="bold"
        android:layout_marginTop="450dp"
        android:hint="@string/password"
        android:id="@+id/password"
        android:inputType="textPassword" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Log_in"
            android:onClick="logIn"
            android:layout_marginTop="520dp"
            android:background="#FFFF" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:layout_marginTop="520dp"
            android:layout_marginLeft="270dp"
            android:onClick="signUp"
            android:background="#FFFF" />

    </RelativeLayout>
</RelativeLayout>
