<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#047498"
    android:orientation="vertical"
    tools:context="com.example.android.climatehero.MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:fontFamily="verdana"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="#FFFF"
        android:textSize="55dp"
        android:textStyle="bold" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycle_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

    </android.support.v7.widget.RecyclerView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/track"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_margin="8dp"
            android:layout_marginBottom="4dp"
            android:background="#FF5722"
            android:fontFamily="verdana"
            android:onClick="track"
            android:text="@string/track"
            android:textSize="15dp"
            android:textStyle="bold" />

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_margin="8dp"
            android:layout_marginBottom="4dp"
            android:background="#FF5722"
            android:fontFamily="verdana"
            android:onClick="logOut"
            android:text="@string/Log_out"
            android:textSize="15dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/learn"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/track"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/treeicon"
            android:fontFamily="verdana"
            android:onClick="learn"
            android:text="@string/learn"
            android:textColor="#FFFF"
            android:textSize="15dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/upload"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/track"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/goal2"
            android:fontFamily="verdana"
            android:onClick="uploadImage"
            android:text="@string/take_pic"
            android:textColor="#FFFF"
            android:textSize="15dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/call"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_below="@id/track"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/call2"
            android:fontFamily="verdana"
            android:onClick="act"
            android:text="@string/act"
            android:textSize="15dp"
            android:textStyle="bold" />
    </RelativeLayout>

</LinearLayout>
