<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_tracker"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#5DBCDB"
    tools:context="com.example.android.climatehero.TrackLightbulbs">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#FFFF"
        android:textStyle="bold"
        android:fontFamily="Verdana"
        android:gravity="center"
        android:textSize="36dp"
        android:text="@string/track_lightbulb" />

    <CheckBox
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@drawable/blueicon"
        android:text="Some of  Them"
        android:textColor="#FFFF"
        android:textStyle="bold"
        android:fontFamily="verdana"
        android:textSize="18dp"
        android:id="@+id/some"
        android:paddingLeft="8dp"
        android:layout_marginTop="150dp"
        android:layout_marginLeft="200dp" />

    <CheckBox
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@drawable/blueicon"
        android:text="@string/all"
        android:textColor="#FFFF"
        android:textSize="18dp"
        android:textStyle="bold"
        android:id="@+id/all"
        android:fontFamily="verdana"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="150dp" />

    <CheckBox
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@drawable/blueicon"
        android:text="@string/one"
        android:textColor="#FFFF"
        android:textStyle="bold"
        android:textSize="18dp"
        android:id="@+id/one"
        android:fontFamily="verdana"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="375dp" />

    <CheckBox
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@drawable/blueicon"
        android:text="None of  Them"
        android:textSize="18dp"
        android:textColor="#FFFF"
        android:textStyle="bold"
        android:fontFamily="verdana"
        android:paddingLeft="8dp"
        android:layout_marginTop="375dp"
        android:id="@+id/none"
        android:layout_marginLeft="200dp" />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFF"
        android:text="@string/track_next"
        android:onClick="trackNext"
        android:layout_alignParentBottom="true" />

</RelativeLayout>
